added sass styling + bem methodology for team section

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -14,9 +14,18 @@ a {
     text-decoration: none;
 }
 
+ul {
+    list-style-type: none;
+}
+
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
+
+    &--silver {
+        background-color: getColor('secondary-bgc');
+    }
+
 }
 
 .container {
