--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -11,8 +11,14 @@ $colors: (
     'primary': #212121,
     'secondary': #2196f3,
     'tertiary' : #afb1b8,
+    'secondary-bgc' : #f5f4fa,
+    'light' : #fff,
+    'grey' : #757575,
 );
 
+$box-shadow: (
+    'card': "0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2)",
+);
 
 $animation: (
     'cubic-bezier': cubic-bezier(0.4, 0, 0.2, 1),
@@ -24,6 +30,10 @@ $animation: (
 
 @function getColor($color) {
     @return map-get($colors, $color);
+}
+
+@function getBoxShadow($bs) {
+    @return string.unquote(map-get($box-shadow, $bs));
 }
 
 @function getAnimation($key) {
