added sass styling + bem methodology for offers section

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -26,6 +26,10 @@ ul {
         background-color: getColor('secondary-bgc');
     }
 
+    &--top-fix {
+        margin-top: -94px;
+    }
+
 }
 
 .container {
