added sass styling + bem methodology for advantages section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 // BASE
 @import "./base/common";
 // COMPONENTS
+@import "./components/advantages";
 @import "./components/offers";
 @import "./components/team";
 @import "./components/socials";
