--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -21,6 +21,7 @@ $background-color: (
 );
 
 $box-shadow: (
+    'button': "0px 4px 4px rgba(0, 0, 0, 0.15)",
     'card': "0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2)",
 );
 
