--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,5 @@
 @import "./components/team";
 @import "./components/socials";
 @import "./components/clients";
+
+@import "./components/projects";
