--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -14,15 +14,21 @@ $colors: (
     'secondary-bgc' : #f5f4fa,
     'light' : #fff,
     'grey' : #757575,
+    'border': #EEE,
 );
 
 $background-color: (
     'grey': rgba(47, 48, 58, 0.8),
+    'overlay': rgba(33, 150, 243, 0.9),
 );
 
 $box-shadow: (
-    'button': "0px 4px 4px rgba(0, 0, 0, 0.15)",
-    'card': "0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2)",
+    'button': 
+        "0px 4px 4px rgba(0, 0, 0, 0.15)",
+    'card': 
+        "0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2)",
+    'gallery': 
+        "0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16)",
 );
 
 $animation: (
