added sass styling + bem methodology for filters section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,5 +11,5 @@
 @import "./components/team";
 @import "./components/socials";
 @import "./components/clients";
-
+@import "./components/filters";
 @import "./components/projects";
