added sass styling + bem methodology for newsletter section

--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -11,6 +11,7 @@ $colors: (
     'primary': #212121,
     'secondary': #2196f3,
     'tertiary' : #afb1b8,
+    'first-bgc' : #2F303A,
     'secondary-bgc' : #f5f4fa,
     'light' : #fff,
     'grey' : #757575,
@@ -20,6 +21,7 @@ $colors: (
 $background-color: (
     'grey': rgba(47, 48, 58, 0.8),
     'overlay': rgba(33, 150, 243, 0.9),
+
 );
 
 $box-shadow: (
