--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,3 +14,5 @@
 @import "./components/clients";
 @import "./components/filters";
 @import "./components/projects";
+
+@import "./components/newsletter";
