--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -21,7 +21,7 @@ $colors: (
 $background-color: (
     'grey': rgba(47, 48, 58, 0.8),
     'overlay': rgba(33, 150, 243, 0.9),
-
+    'svg-footer': rgba(255, 255, 255, 0.1),
 );
 
 $box-shadow: (
