--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,5 +14,5 @@
 @import "./components/clients";
 @import "./components/filters";
 @import "./components/projects";
-
+@import "./components/address";
 @import "./components/newsletter";
