Various minor fixes in the styling footer

--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,6 +3,10 @@
     font-family: getFont('ral');
     color: getColor('secondary');
     margin-right: 93px;
+    
+    &--footer {
+        margin-right: 0px;
+    }
 
     &--white {
         color: white;
