--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -9,6 +9,9 @@
         margin-top: 12px;
         flex-direction: column;
         align-items: flex-start;
+        justify-content: flex-start;
+        margin-left: 70px;
+        gap: 0;
     }
 
     &__links {
