--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 // COMPONENTS
 @import "./components/logo";
 @import "./components/buttons";
+@import "./components/hero";
 @import "./components/advantages";
 @import "./components/offers";
 @import "./components/team";
