--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./components/logo";
 @import "./components/buttons";
 @import "./components/hero";
+@import "./components/modal";
 @import "./components/advantages";
 @import "./components/offers";
 @import "./components/team";
