--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -20,6 +20,9 @@ $colors: (
 
 $background-color: (
     'grey': rgba(47, 48, 58, 0.8),
+    'grey-light': rgba(0, 0, 0, 0.2),
+    'grey-medium': rgba(117, 117, 117, 0.5),
+    'grey-form': rgba(33, 33, 33, 0.2),
     'overlay': rgba(33, 150, 243, 0.9),
     'svg-footer': rgba(255, 255, 255, 0.1),
 );
