--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 @import "./base/common";
 // COMPONENTS
 @import "./components/logo";
+@import "./components/menu";
+@import "./components/contact";
 @import "./components/buttons";
 @import "./components/hero";
 @import "./components/modal";
